test/libsolidity/syntaxTests/nameAndTypeResolution/230_creating_contract_within_the_contract.sol
contract Test {
    function f() public { Test x = new Test(); }
}
// ----
// TypeError: (51-59): Circular reference for contract creation (cannot create instance of derived or same contract).
